@@ -1,5 +1,10 @@
 2011-10-13  Sergio Martin <sergio.martin@artica.es>
 
+	* include/config_process.php: Added missed changes from last
+	commit
+
+2011-10-13  Sergio Martin <sergio.martin@artica.es>
+
 	* include/config_process.php
 	operation/main_menu.php
 	operation/side_menu.php: Added calendar, user info and tools side
